<resources>
    <string name="app_name">FirstProject</string>
    <string name="et_full_name">Full Name</string>
    <string name="hint_mobile_no">Mobile No</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">password</string>
    <string name="hint_reenter_password">re-enter password</string>
    <string name="btn_register">Register</string>
    <string name="tv_already_have_account">Already have account?</string>
    <string name="btn_login">Log In</string>
    <string name="tv_dont_have_account">have no Acoount? Register right now</string>
    <string name="menu_home">Home</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registe</string>
    <string name="Login">Login</string>
    <string name="totalAmount">Total Bill Amount</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="select_payment">Select Payment Option</string>
    <string name="label_model_name">Model Name</string>
    <string name="label_Color">Color</string>
    <string name="label_ram">RAM</string>
    <string name="label_internal_storage">Internal Storage</string>
    <string name="label_processor">Processor</string>
    <string name="label_primary_camera">Primary Cemara</string>
    <string name="label_front_camera">Front Camera</string>
    <string name="label_display">Display</string>
    <string name="label_os">Operation System</string>
    <string name="test">Here is hard code, just for demo</string>
    <string name="cash">Cash On Delivery</string>
    <string name="label_internet">Internet Backing</string>
    <string name="label_debit">Debit Card/Credit Card</string>
    <string name="label_paypal">Pay Pal</string>
    <string name="cart_items">Cart Items</string>
</resources>