<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_home"
            android:id="@+id/action_home"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_cart_24"
            android:id="@+id/action_cart"
            android:title="@string/menu_cart" />
        <item
            android:icon="@drawable/ic_order"
            android:id="@+id/action_order"
            android:title="@string/menu_orders" />
        <item
            android:icon="@drawable/ic_profile"
            android:id="@+id/action_profile"
            android:title="@string/menu_profile" />
        <item
            android:icon="@drawable/ic_logout"
            android:id="@+id/action_logout"
            android:title="@string/menu_logout" />
    </group>

</menu>