<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding"
    tools:context=".activities.checkout.PaymentFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_margin="@dimen/common_margin"
        android:text="@string/select_payment" />

    <RadioGroup
        android:layout_marginTop="@dimen/common_margin"
        android:id="@+id/rg_payment_type"
        android:layout_margin="@dimen/common_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_cash"
            android:text="@string/cash"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/rectangle_box"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <RadioButton
            android:id="@+id/rb_internet"
            android:text="@string/label_internet"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/rectangle_box"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <RadioButton
            android:id="@+id/rb_debit"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/rectangle_box"
            android:text="@string/label_debit"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <RadioButton
            android:id="@+id/rb_paypal"
            android:layout_marginVertical="@dimen/small_margin"
            android:background="@drawable/rectangle_box"
            android:text="@string/label_paypal"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
    </RadioGroup>

</LinearLayout>