<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/common_padding"
    tools:context=".activities.ProductDetailActivity">


    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:Text="Product Name"
        android:textColor="@color/gold_yellow"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"/>
    <RatingBar
        android:id="@+id/rb_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style = "?android:attr/ratingBarStyleIndicator"
        android:numStars = "5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_product_desc"/>

    <TextView
        android:id="@+id/tv_product_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginVertical="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@id/iv_product_img"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        android:maxLines="4"/>


    <ImageView
        android:id="@+id/iv_product_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="5:3"
        android:layout_marginVertical="@dimen/common_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_desc"

        />
    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gold_yellow"
        android:layout_marginTop="@dimen/small_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintTop_toBottomOf="@+id/iv_product_img"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/iv_product_img"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:text="Add To Cart"
        android:textStyle="bold"
        android:textColor="@color/sky_blue"/>

    <View
        android:id="@+id/label_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginVertical="@dimen/common_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price"
        android:background="@color/light_grey"/>

    <TextView
        android:id="@+id/lable_specification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/label_line"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Specifications"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>



    <androidx.cardview.widget.CardView
        android:id="@+id/card_specification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lable_specification"
        app:layout_constraintStart_toStartOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding">
            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="left" />
            <TextView
                android:text="@string/label_model_name"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_model_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_Color"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_model_name"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_ram"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_ram"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_color"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_internal_storage"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_internal_storage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_ram"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_processor"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_processor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_internal_storage"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/label_primary_camera"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_primary_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_processor"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_front_camera"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_front_camera"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_primary_camera"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_display"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_display"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_front_camera"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/label_os"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_label_os"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_display"
                app:layout_constraintEnd_toStartOf="@id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_model_name"
                android:textColor="@color/teal_700"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_color"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_model_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_ram"
                app:layout_constraintTop_toBottomOf="@id/tv_label_color"
                app:layout_constraintStart_toEndOf="@id/barrier"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_internal_storage"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_ram"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_processor"
                android:textColor="@color/teal_700"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_internal_storage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_primary_camera"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_processor"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_front_camera"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_primary_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_display"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_front_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/test"
                android:textColor="@color/teal_700"
                android:layout_marginEnd="@dimen/small_margin"
                android:id="@+id/tv_os"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@id/tv_label_display"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/label_user_review"
        android:text="User Reviews"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/card_specification"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_reviews"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_user_review"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/card_tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="John Parker"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style = "?android:attr/ratingBarStyleSmall"
            android:layout_marginTop="@dimen/large_margin"
            android:numStars = "5"
            android:rating="4"/>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>